# FolderCompare

./: .gitattributes  .gitignore  Benchmarks.md  CLAUDE.md  README.md
.github/workflows/: Rust build.yml  rust.yml
CSharp/: .editorconfig  .gitignore  CliOptions.cs  Config.cs  FileData.cs  FolderCompare.csproj  FolderCompare.sln  GitVersion.cs  HashUtils.cs  Hashes.cs  Program.cs  Publish.cmd  README.md  Sha1.cs  Sha2.cs
CSharp/Properties/: example-launchSettings.json  launchSettings.json
Rust/: Cargo.toml
Rust/src/: customhashset.rs  filedata.rs  main.rs  utils.rs
Testing/: README.md  TestCSharp.ps1  TestRust.ps1  csharpresults_hash.txt  csharpresults_name.txt  csharpresults_namesize.txt  rustresults_hash.txt  rustresults_name.txt  rustresults_namesize.txt
Testing/foldera/: No match X.txt  name and size match.txt  name match.txt
Testing/folderb/B/: Hash match Y.txt  No match Y.txt  name and size match.txt  name match.txt
custom_hash_test/: Cargo.toml
custom_hash_test/src/: customhashset.rs  main.rs  pluggablehashset.rs
