[package]
name = "folder_compare"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'

[dependencies]
anyhow = "> 1.0.68"
git-version = "> 0.3.4"
pico-args = ">= 0.5"
sha2 = "> 0.10.4"
walkdir = "> 2.3.2"
strum = { version = ">= 0.24.1", features = ["derive"] }
base64 = "> 0.21.1"
rayon = ">= 1.7.0"
# hex = ">= 0.4.3"
