[package]
name = "folder_compare"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'
codegen-units = 1
lto = 'fat'

[dependencies]
anyhow = "> 1.0.68"
git-version = "> 0.3.4"
pico-args = ">= 0.5"
sha2 = { default-features = false, version = "> 0.10.4" }
walkdir = "> 2.3.2"
strum = { version = ">= 0.24.1", features = ["derive"], default-features = false }
base64 = { default-features = false, version = "> 0.21.1" }
rayon = ">= 1.7.0"
